--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.7.3",
+    "@types/firebase": "^3.2.1",
     "@types/jest": "^26.0.20",
     "@types/node": "^12.20.4",
     "@types/react": "^17.0.2",
+    "@types/react-bootstrap": "^0.32.25",
     "@types/react-dom": "^17.0.1",
     "bootstrap": "^4.6.0",
     "firebase": "^8.2.10",
