--- a/package.json
+++ b/package.json
@@ -17,12 +17,15 @@
     "@types/react-dom": "^17.0.1",
     "bootstrap": "^4.6.0",
     "firebase": "^8.2.10",
+    "node-sass": "^5.0.0",
     "react": "^17.0.1",
     "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.1",
     "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "sass": "^1.32.8",
+    "swiper": "^6.5.0",
     "typescript": "^4.1.5",
     "web-vitals": "^1.1.0"
   },
