--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "firebase": "^8.2.10",
     "react": "^17.0.1",
     "react-bootstrap": "^1.5.2",
+    "react-card-flip": "^1.1.0",
     "react-dom": "^17.0.1",
     "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.0",
