--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-typist": "^2.0.5",
     "typescript": "^4.1.5",
     "web-vitals": "^1.1.0"
   },
