--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react": "^17.0.2",
     "@types/react-bootstrap": "^0.32.25",
     "@types/react-dom": "^17.0.1",
+    "@types/react-vertical-timeline-component": "^3.0.0",
     "bootstrap": "^4.6.0",
     "date-fns": "^2.0.0-beta.5",
     "firebase": "^8.2.10",
@@ -28,6 +29,7 @@
     "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-vertical-timeline-component": "^3.3.3",
     "typescript": "^4.1.5",
     "web-vitals": "^1.1.0"
   },
